force-app/main/default/objects/Leave_Request__c/Leave_Request__c.object-meta.xml
<CustomObject>
    <description>This object serves as the central hub for employees to submit and for managers/HR to track all requests for time off. It captures essential details like the leave type, requested dates, and the current approval status.</description>
    <label>Leave Request</label>
    <nameField>
        <displayFormat>LREQ-{00000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>