force-app/main/default/objects/Leave_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the User object that dynamically stores the designated approver for this leave request.
This field is automatically populated by the &quot;Set Leave Approver&quot; record-triggered flow upon record creation. The flow&apos;s logic assigns the record owner&apos;s Manager (N+1), or the Manager&apos;s Manager (N+2).</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leave_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>