force-app/main/default/objects/Leave_Request__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>General comments or instructions from the approver, applicable whether the request is approved or rejected.</description>
    <label>Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>