force-app/main/default/objects/Leave_Request__c/fields/Document_Required__c.field-meta.xml
<CustomField>
    <fullName>Document_Required__c</fullName>
    <formula>OR(
        AND(
            ISPICKVAL(Leave_Type__c, &quot;Sick Leave&quot;),
            Number_of_Days_Requested__c &gt; 2
        ),
        ISPICKVAL(Leave_Type__c, &quot;Training&quot;)
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Required</label>
    <type>Checkbox</type>
</CustomField>