force-app/main/default/objects/Leave_Request__c/fields/Employee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Employee_Comments__c</fullName>
    <description>Any additional notes or context provided by the employee.</description>
    <label>Employee Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>