force-app/main/default/objects/Leave_Request__c/fields/Last_Approver__c.field-meta.xml
<CustomField>
    <fullName>Last_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leave_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>