force-app/main/default/objects/Leave_Request__c/fields/Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance__c</fullName>
    <label>Leave Balance</label>
    <referenceTo>Leave_Balance__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>