force-app/main/default/objects/Leave_Request__c/fields/Number_of_Days_Requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Requested__c</fullName>
    <description>Calculates the total number of working days requested, automatically excluding weekends and company holidays.</description>
    <label>Number of Days Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>