force-app/main/default/objects/Leave_Request__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>The specific reason why the leave request was denied.</description>
    <label>Rejection Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduling Conflict / Insufficient Team Coverage</fullName>
            </value>
            <value>
                <fullName>Critical Project Deadline</fullName>
            </value>
            <value>
                <fullName>Request Submitted Outside Policy Deadlines</fullName>
            </value>
            <value>
                <fullName>Blackout Period</fullName>
            </value>
            <value>
                <fullName>Insufficient Leave Balance</fullName>
            </value>
            <value>
                <fullName>Needs Discussion / Consult Me</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>