force-app/main/default/objects/Leave_Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the employee submitting the leave request.</description>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>