force-app/main/default/objects/Leave_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Tracks the current stage of the leave request (e.g., Submitted, Pending Approval, Approved, Rejected).</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Manager Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>