force-app/main/default/objects/Leave_Request__c/fields/Supporting_Document_Received__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Document_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supporting Document Received</label>
    <type>Checkbox</type>
</CustomField>