force-app/main/default/objects/Leave_Request__c/validationRules/Comments_Required_for_Other_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_Required_for_Other_Reason</fullName>
    <active>true</active>
    <description>Ensure that when the rejection reason is &quot;Other&quot;, the approver must provide comments explaining the refusal.</description>
    <errorConditionFormula>AND(
					ISPICKVAL(	Rejection_Reason__c  , &quot;Other&quot;)	, 
	     ISBLANK(Approver_Comments__c)
			)</errorConditionFormula>
    <errorDisplayField>Approver_Comments__c</errorDisplayField>
    <errorMessage>Please provide comments when Other is selected as the rejection reason.</errorMessage>
</ValidationRule>