force-app/main/default/objects/Leave_Request__c/validationRules/Insufficient_Leave_Balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Insufficient_Leave_Balance</fullName>
    <active>true</active>
    <description>Prevents submitting a leave request when the number of requested days exceeds the employee&apos;s remaining leave balance.</description>
    <errorConditionFormula> 
        AND(
            OR(
                ISNEW(),
                ISCHANGED(Number_of_Days_Requested__c),
                ISPICKVAL(Status__c, "Approved")
            ),
            NOT(ISPICKVAL(PRIORVALUE(Status__c), "Cancellation Requested")),
            Leave_Balance__r.Remaining_Days__c &lt; Number_of_Days_Requested__c
        )
    </errorConditionFormula>
    <errorMessage>The number of requested days exceeds the available leave balance.</errorMessage>
</ValidationRule>