force-app/main/default/objects/Leave_Request__c/validationRules/Insufficient_Notice_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Insufficient_Notice_Period</fullName>
    <active>true</active>
    <description>Ensures that leave requests are submitted a minimum number of days in advance, as defined by a custom label.</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Start_Date__c)
    ),
    NOT(ISPICKVAL(Leave_Type__c, &quot;Sick Leave&quot;)),
    (Start_Date__c - TODAY()) &lt; 5
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Leave requests must be submitted at least 5 days in advance.</errorMessage>
</ValidationRule>