force-app/main/default/objects/Leave_Request__c/validationRules/Invalid_Leave_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Leave_Date_Range</fullName>
    <active>true</active>
    <description>Prevents submitting a leave request where the end date is earlier than the start date.</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The end date cannot be earlier than the start date.</errorMessage>
</ValidationRule>