force-app/main/default/objects/Leave_Request__c/validationRules/Leave_Request_Single_Current_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Request_Single_Current_Year</fullName>
    <active>true</active>
    <description>Prevents leave requests if the start or end dates are not in the current year.</description>
    <errorConditionFormula>OR(
  YEAR(Start_Date__c) &lt;&gt; YEAR(TODAY()),
  YEAR(End_Date__c) &lt;&gt; YEAR(TODAY())
)</errorConditionFormula>
    <errorMessage>Both start date and end date must be in the current year.</errorMessage>
</ValidationRule>