force-app/main/default/objects/Leave_Request__c/validationRules/Leave_Request_Single_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Request_Single_Year</fullName>
    <active>true</active>
    <description>Prevents leave requests from spanning two different years, since balances are managed per year.</description>
    <errorConditionFormula>YEAR( Start_Date__c )  &lt;&gt;  YEAR( End_Date__c )</errorConditionFormula>
    <errorMessage>Prevents leave requests from spanning two different years, since balances are managed per year.</errorMessage>
</ValidationRule>